Move ML A2, A3, A4 placeholder posts
- Planning to publish placeholder versions of the ML assignment posts. I
moved them out of the /draft folder.
- Updates links in MSCS and ML Retro posts to point at the placeholder
posts.

--- a/src/content/ideas/2025/ml-a2/index.mdx
+++ b/src/content/ideas/2025/ml-a2/index.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Random Optimization on Discrete and Continuous Problems'
 description: 'A comparative analysis of random optimization performance on discrete and continuous problems'
-date: '2025-08-02'
-status: 'in-progress'
+date: '2025-08-11'
+status: 'draft'
 type: 'project'
 tags: ['machine-learning', 'python', 'optimization']
 category: ['projects']
