--- a/src/content/ideas/2025/ml-a3/index.mdx
+++ b/src/content/ideas/2025/ml-a3/index.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Unsupervised Learning Techniques'
 description: 'Exploration of unsupervised learning techniques'
-date: '2025-08-03'
-status: 'in-progress'
+date: '2025-08-12'
+status: 'draft'
 type: 'project'
 tags: ['machine-learning', 'python', 'unsupervised-learning']
 category: ['projects']
