--- a/src/content/ideas/2025/ml-a4/index.mdx
+++ b/src/content/ideas/2025/ml-a4/index.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Reinforcement Learning on a Discrete & Continuous Environments'
 description: 'Comparison of reinforcement learning algorithms in discrete and continuous environments'
-date: '2025-08-04'
-status: 'in-progress'
+date: '2025-08-13'
+status: 'draft'
 type: 'project'
 tags: ['machine-learning', 'python', 'reinforcement-learning']
 category: ['projects']
