--- a/src/content/ideas/2025/ml-retro/index.mdx
+++ b/src/content/ideas/2025/ml-retro/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Machine Learning'
 description: 'A survey of concepts covered in my graduate Machine Learning course'
-date: '2025-08-01'
+date: '2025-08-09'
 status: 'in-progress'
 type: 'retro'
 tags: ['machine-learning', 'python', 'supervised-learning', 'unsupervised-learning', 'reinforcement-learning', 'optimization']
@@ -850,12 +850,10 @@ For more details, see the lectures on <a href="https://www.youtube.com/watch?v=g
 The course was taught with a huge focus on the projects. These emphasized the conceptual material presented in the lectures through hands-on research and experimentation. They were a great way to solidify the concepts learned in the course and took up a significant portion of the time I spent on the course.
 
 Here are the projects from the course:
-- **Project 1:** Supervised Learning
-- **Project 2:** Randomized Optimization
-- **Project 3:** Unsupervised Learning & Dimensionality Reduction
-- **Project 4:** Reinforcement Learning
-
-I'm planning to write deeper dives on each of the projects.
+- **Project 1:** [Supervised Learning](/ideas/2025/ml-a1/)
+- **Project 2:** [Randomized Optimization](/ideas/2025/ml-a2/)
+- **Project 3:** [Unsupervised Learning & Dimensionality Reduction](/ideas/2025/ml-a2/)
+- **Project 4:** [Reinforcement Learning](/ideas/2025/ml-a2/)
 
 ### Grading
 
