--- a/src/content/ideas/2025/mscs/index.mdx
+++ b/src/content/ideas/2025/mscs/index.mdx
@@ -38,6 +38,10 @@ After a demanding first semester, I took a three-month sabbatical to travel thro
 
 🍂 Fall 2024:
   - [CS 7641: Machine Learning (ML)](/ideas/2025/ml-retro/)
+    - [Project 1: Supervised Learning](/ideas/2025/ml-a1/)
+    - [Project 2: Randomized Optimization](/ideas/2025/ml-a2/)
+    - [Project 3: Unsupervised Learning & Dimensionality Reduction](/ideas/2025/ml-a3/)
+    - [Project 4: Reinforcement Learning](/ideas/2025/ml-a4/)
   - CS 6290: High Performance Computer Architecture (HPCA)
 
 🌱 Spring 2025:
