--- a/src/content/ideas/2025/parallelism-concurrency/index.mdx
+++ b/src/content/ideas/2025/parallelism-concurrency/index.mdx
@@ -2,7 +2,7 @@
 title: 'Concurrency and Parallelism'
 description: 'A dive into concurrency and parallelism across different levels of computer systems'
 date: '2025-07-29'
-status: 'published'
+status: 'complete'
 type: 'idea'
 tags: ['operating-systems', 'multithreading', 'distributed-systems', 'go', 'c++']
 category: ['ideas']
