--- a/src/content/ideas/2025/ml-a1/index.mdx
+++ b/src/content/ideas/2025/ml-a1/index.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'A Practical Guide to Supervised Learning: From Theory to Application'
+title: 'A Practical Guide to Supervised Learning'
 description: 'A conceptual walkthrough of the supervised learning process, covering data analysis, model evaluation, and the fundamental trade-offs involved in building effective classifiers.'
-date: '2025-08-02'
+date: '2025-08-10'
 status: 'in-progress'
 type: 'project'
 tags: ['CS7641', 'machine-learning', 'supervised-learning', 'python', 'data-science']
