Tweak posts tags + placeholder warnings

--- a/src/content/ideas/2022/nand2tetris-vm-translator/index.mdx
+++ b/src/content/ideas/2022/nand2tetris-vm-translator/index.mdx
@@ -5,7 +5,7 @@ date: '2022-03-12'
 status: 'complete'
 type: 'retro'
 category: ['seedling']
-tags: ['computer-science', 'learning-in-public', 'typescript', 'java']
+tags: ['computer-science', 'learning-in-public', 'typescript']
 media_subpath: '/ideas/nand2tetris-vm-translator/'
 hero:
     alt: 'Self Replicating Machine by Peter J. Yost'
