--- a/src/content/ideas/2022/planting-seeds/index.mdx
+++ b/src/content/ideas/2022/planting-seeds/index.mdx
@@ -4,7 +4,7 @@ description: 'Planting the seeds of my own digital garden'
 date: '2022-03-11'
 status: 'complete'
 type: 'note'
-tags: ['digital-gardens', 'learning-in-public']
+tags: ['learning-in-public', 'short']
 media_subpath: '/ideas/planting-seeds/'
 category: ['seedling']
 hero:
