--- a/src/content/ideas/2025/ml-a1/index.mdx
+++ b/src/content/ideas/2025/ml-a1/index.mdx
@@ -4,7 +4,7 @@ description: 'A conceptual walkthrough of the supervised learning process, cover
 date: '2025-08-10'
 status: 'in-progress'
 type: 'project'
-tags: ['CS7641', 'machine-learning', 'supervised-learning', 'python', 'data-science']
+tags: ['machine-learning', 'supervised-learning', 'python', 'data-science']
 category: ['projects']
 draft: false
 audience: 'All'
