--- a/src/content/ideas/2025/mscs/index.mdx
+++ b/src/content/ideas/2025/mscs/index.mdx
@@ -5,7 +5,7 @@ date: '2025-06-20'
 updated: '2025-07-22'
 status: 'in-progress'
 type: 'retro'
-tags: ['MSCS', 'machine-learning', 'python']
+tags: ['MSCS', 'computer-science', 'learning-in-public']
 category: ['projects']
 draft: false
 audience: 'All'
