--- a/src/content/ideas/2025/ml-a2/index.mdx
+++ b/src/content/ideas/2025/ml-a2/index.mdx
@@ -14,6 +14,9 @@ image:
   alt: 'The Port of Saint-Tropez by Paul Signac'
 ---
 
+> [!Warning] Early Draft
+> This is an early version of this project write-up. For now it's largely a placeholder. I'm actively working on it.
+
 ## Introduction
 
 This project is a comparative analysis of supervised learning algorithms on diverse datasets. The goal is to understand the strengths and weaknesses of different algorithms and to provide a recommendation for the best algorithm for a given dataset.
