--- a/src/content/ideas/2025/ml-retro/index.mdx
+++ b/src/content/ideas/2025/ml-retro/index.mdx
@@ -4,7 +4,7 @@ description: 'A survey of concepts covered in my graduate Machine Learning cours
 date: '2025-08-09'
 status: 'in-progress'
 type: 'retro'
-tags: ['machine-learning', 'python', 'supervised-learning', 'unsupervised-learning', 'reinforcement-learning', 'optimization']
+tags: ['machine-learning', 'python', 'supervised-learning', 'unsupervised-learning', 'reinforcement-learning', 'optimization', 'computer-science', 'learning-in-public']
 category: ['mscs']
 draft: false
 audience: 'All'
