Pull in tag changes from mesh-grid-hero branch

--- a/src/content/ideas/2021/nand2tetris-part1/index.mdx
+++ b/src/content/ideas/2021/nand2tetris-part1/index.mdx
@@ -6,7 +6,7 @@ updated: '2022-03-12'
 status: 'complete'
 type: 'retro'
 category: ['budding']
-tags: ['computer-science', 'learning-in-public', 'typescript']
+tags: ['computer-architecture', 'computer-science', 'learning-in-public', 'typescript']
 media_subpath: '/ideas/nand2tetris-part1/'
 draft: false
 audience: 'Developers'
