Add DRAFT affordance and filter from prod

--- a/src/content/ideas/2025/ml-a1/index.mdx
+++ b/src/content/ideas/2025/ml-a1/index.mdx
@@ -6,7 +6,7 @@ status: 'in-progress'
 type: 'project'
 tags: ['machine-learning', 'supervised-learning', 'python', 'data-science']
 category: ['projects']
-draft: false
+draft: true
 audience: 'All'
 media_subpath: "/ideas/ml-a1/"
 image:
