--- a/src/content/ideas/2025/ml-a2/index.mdx
+++ b/src/content/ideas/2025/ml-a2/index.mdx
@@ -6,7 +6,7 @@ status: 'draft'
 type: 'project'
 tags: ['machine-learning', 'python', 'optimization']
 category: ['projects']
-draft: false
+draft: true
 audience: 'All'
 media_subpath: "/ideas/ml-a2/"
 image:
