--- a/src/references.bib
+++ b/src/references.bib
@@ -186,6 +186,217 @@
 }
 
 % ================================================
-% 
+% ML
 % ================================================
 
+@misc{bogdanThoughtAnchorsWhich2025,
+  title         = {Thought {{Anchors}}: {{Which LLM Reasoning Steps Matter}}?},
+  shorttitle    = {Thought {{Anchors}}},
+  author        = {Bogdan, Paul C. and Macar, Uzay and Nanda, Neel and Conmy, Arthur},
+  year          = {2025},
+  month         = aug,
+  number        = {arXiv:2506.19143},
+  eprint        = {2506.19143},
+  primaryclass  = {cs},
+  publisher     = {arXiv},
+  doi           = {10.48550/arXiv.2506.19143},
+  urldate       = {2025-08-19},
+  abstract      = {Reasoning large language models have recently achieved state-of-the-art performance in many fields. However, their long-form chain-of-thought reasoning creates interpretability challenges as each generated token depends on all previous ones, making the computation harder to decompose. We argue that analyzing reasoning traces at the sentence level is a promising approach to understanding reasoning processes. We present three complementary attribution methods: (1) a black-box method measuring each sentence's counterfactual importance by comparing final answers across 100 rollouts conditioned on the model generating that sentence or one with a different meaning; (2) a white-box method of aggregating attention patterns between pairs of sentences, which identified ``broadcasting'' sentences that receive disproportionate attention from all future sentences via ``receiver'' attention heads; (3) a causal attribution method measuring logical connections between sentences by suppressing attention toward one sentence and measuring the effect on each future sentence's tokens. Each method provides evidence for the existence of thought anchors, reasoning steps that have outsized importance and that disproportionately influence the subsequent reasoning process. These thought anchors are typically planning or backtracking sentences. We provide an open-source tool (thought-anchors.com) for visualizing the outputs of our methods, and present a case study showing converging patterns across methods that map how a model performs multi-step reasoning. The consistency across methods demonstrates the potential of sentence-level analysis for a deeper understanding of reasoning models.},
+  archiveprefix = {arXiv},
+  langid        = {english},
+  keywords      = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Computer Science - Machine Learning},
+  file          = {/Users/tylercrosse/Zotero/storage/8JVDGT5Q/Bogdan et al. - 2025 - Thought Anchors Which LLM Reasoning Steps Matter.pdf}
+}
+
+@inproceedings{Burbidge2001AnIT,
+  title  = {An Introduction to Support Vector Machines for Data Mining},
+  author = {Burbidge, Robert and Buxton, B.},
+  year   = {2001}
+}
+
+@article{burgesTutorialSupportVector1998,
+  title    = {A {{Tutorial}} on {{Support Vector Machines}} for {{Pattern Recognition}}},
+  author   = {Burges, Christopher J.C.},
+  year     = {1998},
+  month    = jun,
+  journal  = {Data Mining and Knowledge Discovery},
+  volume   = {2},
+  number   = {2},
+  pages    = {121--167},
+  issn     = {1573-756X},
+  doi      = {10.1023/A:1009715923555},
+  urldate  = {2025-07-30},
+  abstract = {The tutorial starts with an overview of the concepts of VC dimension and structural risk minimization. We then describe linear Support Vector Machines (SVMs) for separable and non-separable data, working through a non-trivial example in detail. We describe a mechanical analogy, and discuss when SVM solutions are unique and when they are global. We describe how support vector training can be practically implemented, and discuss in detail the kernel mapping technique which is used to construct SVM solutions which are nonlinear in the data. We show how Support Vector machines can have very large (even infinite) VC dimension by computing the VC dimension for homogeneous polynomial and Gaussian radial basis function kernels. While very high VC dimension would normally bode ill for generalization performance, and while at present there exists no theory which shows that good generalization performance is guaranteed for SVMs, there are several arguments which support the observed high accuracy of SVMs, which we review. Results of some experiments which were inspired by these arguments are also presented. We give numerous examples and proofs of most of the key theorems. There is new material, and I hope that the reader will find that even old material is cast in a fresh light.},
+  langid   = {english},
+  keywords = {Automated Pattern Recognition,Learning algorithms,Linear Algebra,Machine Learning,pattern recognition,Pattern Recognition Receptors,Statistical Learning,statistical learning theory,support vector machines,VC dimension}
+}
+
+@misc{contributorsEvolutionaryAlgorithm2019,
+  title      = {Evolutionary Algorithm},
+  author     = {Contributors, Wikipedia},
+  year       = {2019},
+  month      = jun,
+  publisher  = {Wikimedia Foundation},
+  annotation = {Backup Publisher: Wikipedia\\
+                Read\_Status: Read\\
+                Read\_Status\_Date: 2025-02-26T16:10:17.765Z}
+}
+
+@misc{contributorsGeneticAlgorithm2019,
+  title      = {Genetic Algorithm},
+  author     = {Contributors, Wikipedia},
+  year       = {2019},
+  month      = mar,
+  publisher  = {Wikimedia Foundation},
+  annotation = {Backup Publisher: Wikipedia\\
+                Read\_Status: Read\\
+                Read\_Status\_Date: 2025-02-26T16:10:17.764Z}
+}
+
+@misc{contributorsHillClimbing2019,
+  title      = {Hill Climbing},
+  author     = {Contributors, Wikipedia},
+  year       = {2019},
+  month      = dec,
+  publisher  = {Wikipedia},
+  annotation = {Read\_Status: Read\\
+                Read\_Status\_Date: 2025-02-26T16:10:17.768Z}
+}
+
+@misc{contributorsMathematicalOptimization2019,
+  title      = {Mathematical Optimization},
+  author     = {Contributors, Wikipedia},
+  year       = {2019},
+  month      = dec,
+  publisher  = {Wikimedia Foundation},
+  annotation = {Backup Publisher: Wikipedia\\
+                Read\_Status: Read\\
+                Read\_Status\_Date: 2025-02-26T16:10:17.769Z}
+}
+
+@misc{contributorsNoFreeLunch2019,
+  title      = {No Free Lunch Theorem},
+  author     = {Contributors, Wikipedia},
+  year       = {2019},
+  month      = sep,
+  publisher  = {Wikimedia Foundation},
+  annotation = {Backup Publisher: Wikipedia\\
+                Read\_Status: Read\\
+                Read\_Status\_Date: 2025-02-26T16:10:17.767Z}
+}
+
+@misc{contributorsParetoFront2022,
+  title      = {Pareto Front},
+  author     = {Contributors, Wikipedia},
+  year       = {2022},
+  month      = oct,
+  publisher  = {Wikipedia},
+  annotation = {Read\_Status: Read\\
+                Read\_Status\_Date: 2025-02-26T16:10:17.769Z}
+}
+
+@misc{contributorsSimulatedAnnealing2019,
+  title      = {Simulated Annealing},
+  author     = {Contributors, Wikipedia},
+  year       = {2019},
+  month      = nov,
+  publisher  = {Wikimedia Foundation},
+  annotation = {Backup Publisher: Wikipedia\\
+                Read\_Status: Read\\
+                Read\_Status\_Date: 2025-02-26T16:10:17.767Z}
+}
+
+@misc{contributorsTravellingSalesmanProblem2019,
+  title      = {Travelling Salesman Problem},
+  author     = {Contributors, Wikipedia},
+  year       = {2019},
+  month      = jul,
+  publisher  = {Wikimedia Foundation},
+  annotation = {Backup Publisher: Wikipedia\\
+                Read\_Status: Read\\
+                Read\_Status\_Date: 2025-02-26T16:10:17.766Z}
+}
+
+@article{hoSimpleExplanationNo2002,
+  title      = {Simple Explanation of the No Free Lunch Theorem of Optimization},
+  author     = {Ho, None Yu-Chi and Pepyne, D. L.},
+  year       = {2002},
+  month      = nov,
+  journal    = {Proceedings of the 40th IEEE Conference on Decision and Control (Cat. No.01CH37228)},
+  doi        = {10.1109/.2001.980896},
+  annotation = {Read\_Status: To Read\\
+                Read\_Status\_Date: 2025-02-26T16:09:43.747Z}
+}
+
+@misc{mansfieldGitHubJlm429Pyperch2024,
+  title      = {{{GitHub}} - Jlm429/Pyperch: {{Randomized}} Opt Networks with {{PyTorch}}},
+  author     = {Mansfield, John},
+  year       = {2024},
+  publisher  = {GitHub},
+  urldate    = {2024-10-10},
+  annotation = {Read\_Status: To Read\\
+                Read\_Status\_Date: 2025-02-26T16:09:43.748Z}
+}
+
+@misc{matasAdaBoost2010,
+  title   = {{{AdaBoost}}},
+  author  = {Matas, Jira and Sochman, Jan},
+  year    = {2010},
+  address = {Centre for Machine Perception Czech Technical University, Prague}
+}
+
+@article{schapireBoostingApproachMachine2002,
+  title      = {The {{Boosting Approach}} to {{Machine Learning}}: {{An Overview}}},
+  shorttitle = {The {{Boosting Approach}} to {{Machine Learning}}},
+  author     = {Schapire, Robert},
+  year       = {2002},
+  month      = jan,
+  journal    = {Nonlin. Estimat. Classif. Lect. Notes Stat},
+  volume     = {171},
+  issn       = {978-0-387-95471-4},
+  doi        = {10.1007/978-0-387-21579-2_9},
+  abstract   = {Boosting is a general method for improving the accuracy of any given learning algorithm. Focusing primarily on the AdaBoost algorithm, this chapter overviews some of the recent work on boosting including analyses of AdaBoost's training error and generalization error; boosting's connection to game theory and linear programming; the relationship between boosting and logistic regression; extensions of AdaBoost for multiclass classification problems; methods of incorporating human knowledge into boosting; and experimental and applied work using boosting.}
+}
+
+@article{dellaert2002expectation,
+  title     = {The Expectation Maximization Algorithm},
+  author    = {Dellaert, Frank},
+  year      = {2002},
+  publisher = {Georgia Institute of Technology},
+  keywords  = {No DOI found}
+}
+
+@article{hyvarinen2000independent,
+  title     = {Independent Component Analysis: Algorithms and Applications},
+  author    = {Hyv{\"a}rinen, Aapo and Oja, Erkki},
+  year      = {2000},
+  journal   = {Neural networks},
+  volume    = {13},
+  number    = {4-5},
+  pages     = {411--430},
+  publisher = {Elsevier},
+  doi       = {10.1016/S0893-6080(00)00026-5}
+}
+
+@article{kleinberg2002impossibility,
+  title    = {An Impossibility Theorem for Clustering},
+  author   = {Kleinberg, Jon},
+  year     = {2002},
+  journal  = {Advances in neural information processing systems},
+  volume   = {15},
+  keywords = {No DOI found}
+}
+
+@article{isbell1998restructuring,
+  title    = {Restructuring Sparse High Dimensional Data for Effective Retrieval},
+  author   = {Isbell, Charles and Viola, Paul},
+  year     = {1998},
+  journal  = {Advances in Neural Information Processing Systems},
+  volume   = {11},
+  keywords = {No DOI found}
+}
+
+
+% ================================================
+% 
+% ================================================
