Move HDDA post + add draft affordance on blogpost

--- a/src/content/ideas/2025/hdda-overview/index.mdx
+++ b/src/content/ideas/2025/hdda-overview/index.mdx
@@ -6,7 +6,7 @@ status: 'in-progress'
 type: 'project'
 tags: ['HDDA', 'machine-learning', 'python']
 category: ['projects']
-draft: false
+draft: true
 audience: 'All'
 media_subpath: "/ideas/gios-pr3/"
 image:
