Add updated date to ML post

--- a/src/content/ideas/2025/hdda-overview/index.mdx
+++ b/src/content/ideas/2025/hdda-overview/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'HDDA Overview'
-description: 'A dive into a project that explores IPC and synchronization in C'
-date: '2025-07-11'
-status: 'in-progress'
+title: 'High-Dimensional Data Analytics'
+description: 'A survey of techniques for learning from data with high dimensions and a low number of samples'
+date: '2025-09-11'
+status: 'draft'
 type: 'project'
 tags: ['HDDA', 'machine-learning', 'python']
 category: ['projects']
