--- a/src/content/ideas/2025/ml-retro/index.mdx
+++ b/src/content/ideas/2025/ml-retro/index.mdx
@@ -2,6 +2,7 @@
 title: 'Machine Learning'
 description: 'A survey of concepts covered in my graduate Machine Learning course'
 date: '2025-08-09'
+updated: '2025-09-25'
 status: 'in-progress'
 type: 'retro'
 tags: ['machine-learning', 'python', 'supervised-learning', 'unsupervised-learning', 'reinforcement-learning', 'optimization', 'computer-science', 'learning-in-public']
