Implement masonry grid layout with nested project hierarchy
- Convert ideas grid from CSS Grid to 3-column masonry layout using CSS columns
- Add parent/child post relationships via optional 'parent' field in content schema
- Nest child project posts inside parent retro card containers for compact display
- Style child posts with horizontal layout (image left, content right)
- Add visual differentiation for retro posts (larger images, typography)
- Implement filtering support for hierarchical post structure
- Remove separate card borders for children, use dividers within parent card

--- a/src/content/ideas/2022/planting-seeds/index.mdx
+++ b/src/content/ideas/2022/planting-seeds/index.mdx
@@ -3,7 +3,7 @@ title: 'A foray in Digital Gardens 👨‍🌾'
 description: 'Planting the seeds of my own digital garden'
 date: '2022-03-11'
 status: 'complete'
-type: 'note'
+type: 'article'
 tags: ['learning-in-public', 'short']
 media_subpath: '/ideas/planting-seeds/'
 category: ['seedling']
