--- a/src/content/ideas/2025/gios-pr3/index.mdx
+++ b/src/content/ideas/2025/gios-pr3/index.mdx
@@ -10,6 +10,7 @@ category: ['projects']
 draft: false
 audience: 'All'
 media_subpath: "/ideas/gios-pr3/"
+parent: '2025/gios-retro'
 image:
   path: "./pizza-cache2.png"
   alt: 'Pizza Cache'
