--- a/src/content/ideas/2025/gios-pr4/index.mdx
+++ b/src/content/ideas/2025/gios-pr4/index.mdx
@@ -9,6 +9,7 @@ category: ['projects']
 draft: false
 audience: 'Technical'
 media_subpath: "/ideas/gios-pr4/"
+parent: '2025/gios-retro'
 image:
   path: "./distributed-pizza-server.jpeg"
   alt: 'Distributed Pizza Server'
