--- a/src/content/ideas/2025/icml/index.mdx
+++ b/src/content/ideas/2025/icml/index.mdx
@@ -3,7 +3,7 @@ title: 'Reflections on ICML 2025'
 description: 'Some notes and observations from my time at the 2025 International Conference for Machine Learning (ICML)'
 date: '2025-07-30'
 status: 'complete'
-type: 'retro'
+type: 'article'
 tags: ['machine-learning', 'deep-learning', 'short']
 category: ['retros']
 draft: false
