--- a/src/content/ideas/2025/ml-a2/index.mdx
+++ b/src/content/ideas/2025/ml-a2/index.mdx
@@ -9,6 +9,7 @@ category: ['projects']
 draft: true
 audience: 'All'
 media_subpath: "/ideas/ml-a2/"
+parent: '2025/ml-retro'
 image:
   path: "./signac-saint-tropez-optim.jpg"
   alt: 'The Port of Saint-Tropez by Paul Signac'
