Small update to image paths

--- a/src/content/ideas/2025/ai-safety-evals-paper-club-notes/index.mdx
+++ b/src/content/ideas/2025/ai-safety-evals-paper-club-notes/index.mdx
@@ -33,8 +33,8 @@ First, here are some helpful links for the group:
 
 [2025-03-11 by Iván Arcuschin, Jett Janiak, Robert Krzyzanowski, et al.](https://arxiv.org/abs/2503.08679 )
 
-import argumentSwitching from "2025-09-09-argument-switching.png";
-import unfaithful from "2025-09-09-unfaithful-illogicial.png";
+import argumentSwitching from "./2025-09-09-argument-switching.png";
+import unfaithful from "./2025-09-09-unfaithful-illogicial.png";
 
 ##### Core Idea
 
@@ -86,8 +86,8 @@ import unfaithful from "2025-09-09-unfaithful-illogicial.png";
 
 This article has some great visualizations on the website is worth a visit just to play with them.
 
-import clueUsage from "2025-09-16-clue-usage.png";
-import failDetect from "2025-09-16-fail-detect.png";
+import clueUsage from "./2025-09-16-clue-usage.png";
+import failDetect from "./2025-09-16-fail-detect.png";
 
 
 ##### Core Idea
@@ -128,7 +128,7 @@ import failDetect from "2025-09-16-fail-detect.png";
 
 ### 2025-09-30 - Secret Collusion among AI Agents Multi Agent Deception via Steganography
 
-import secretCollusion from "2025-09-30-secret-collusion.png";
+import secretCollusion from "./2025-09-30-secret-collusion.png";
 
 [2024-02-12 by Sumeet Ramesh Motwani et al.](https://arxiv.org/abs/2402.07510)
 
@@ -163,7 +163,7 @@ import secretCollusion from "2025-09-30-secret-collusion.png";
 
 ### 2025-10-07 - Security Challenges in AI Agent Deployment: Insights from a Large Scale Public Competition
 
-import redTeam from "2025-10-07-red-team.png";
+import redTeam from "./2025-10-07-red-team.png";
 
 [2025-07-28 by Andy Zou et al.](https://arxiv.org/abs/2507.20526)
 
@@ -202,8 +202,8 @@ import redTeam from "2025-10-07-red-team.png";
 
 ### 2025-10-14 - Building and evaluating alignment auditing agents
 
-import modelOrganism from "2025-10-14-model-organism.png";
-import investigatorWins from "2025-10-14-investigator-wins.png";
+import modelOrganism from "./2025-10-14-model-organism.png";
+import investigatorWins from "./2025-10-14-investigator-wins.png";
 
 [2025-07-24 by Trenton Bricken, Rowan Wang, Sam Bowman, et al.](https://alignment.anthropic.com/2025/automated-auditing/)
 [GDoc used for the presentation](https://docs.google.com/document/d/1E5XFddoL1h7o21BQOtUYNuczadOqrofvYlKy29TYbI4/edit?tab=t.0#heading=h.j0uijoqeqyfc)
