Refresh AI alignment notes metadata

--- a/src/content/ideas/2025/ai-safety-evals-paper-club-notes/index.mdx
+++ b/src/content/ideas/2025/ai-safety-evals-paper-club-notes/index.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'BlueDot AI Safety Evals Paper Club Notes'
-description: 'A summary of my takeaways from three influential articles on conducting effective empirical AI alignment research.'
+description: 'My notes and takeaways from the BlueDot AI Safety Evals paper club, covering recent papers on AI alignment, security, and evaluations.'
 date: '2025-09-09'
 updated: '2025-10-14'
 status: 'in-progress'
 type: 'note'
-tags: ['machine-learning', 'research', 'ai-alignment', 'mechanistic-interpretability']
+tags: ['machine-learning', 'research', 'AI-alignment', 'mechanistic-interpretability']
 category: ['ideas']
 draft: false
 audience: 'All'
