--- a/src/content/ideas/2025/ml-research-notes/index.mdx
+++ b/src/content/ideas/2025/ml-research-notes/index.mdx
@@ -4,7 +4,7 @@ description: 'A summary of my takeaways from three influential articles on condu
 date: '2025-10-18'
 status: 'in-progress'
 type: 'note'
-tags: ['machine-learning', 'research', 'ai-alignment', 'mechanistic-interpretability']
+tags: ['machine-learning', 'research', 'AI-alignment', 'mechanistic-interpretability']
 category: ['ideas']
 draft: false
 audience: 'All'
