Tag MSCS coursework posts

--- a/src/content/ideas/2025/gios-pr1/index.mdx
+++ b/src/content/ideas/2025/gios-pr1/index.mdx
@@ -5,7 +5,7 @@ date: '2025-06-23'
 updated: '2025-07-22'
 status: 'complete'
 type: 'project'
-tags: ['GIOS', 'operating-systems', 'c', 'multithreading', 'socket-programming']
+tags: ['GIOS', 'operating-systems', 'c', 'multithreading', 'socket-programming', 'MSCS']
 category: ['projects']
 draft: false
 audience: 'All'
