--- a/src/content/ideas/2025/gios-pr4/index.mdx
+++ b/src/content/ideas/2025/gios-pr4/index.mdx
@@ -4,7 +4,7 @@ description: 'A deep dive into the challenges of remote communication and data c
 date: '2025-07-22'
 status: 'complete'
 type: 'project'
-tags: ['GIOS', 'operating-systems', 'c++', 'multithreading', 'RPC', 'distributed-systems']
+tags: ['GIOS', 'operating-systems', 'c++', 'multithreading', 'RPC', 'distributed-systems', 'MSCS']
 category: ['projects']
 draft: false
 audience: 'Technical'
