--- a/src/content/ideas/2025/gios-retro/index.mdx
+++ b/src/content/ideas/2025/gios-retro/index.mdx
@@ -5,7 +5,7 @@ date: '2025-06-22'
 updated: '2025-07-22'
 status: 'complete'
 type: 'retro'
-tags: ['GIOS', 'operating-systems', 'c', 'c++', 'multithreading', 'IPC', 'socket-programming', 'distributed-systems', 'computer-science', 'learning-in-public']
+tags: ['GIOS', 'operating-systems', 'c', 'c++', 'multithreading', 'IPC', 'socket-programming', 'distributed-systems', 'computer-science', 'learning-in-public', 'MSCS']
 category: ['mscs']
 draft: false
 audience: 'All'
