--- a/src/content/ideas/2025/ml-a2/index.mdx
+++ b/src/content/ideas/2025/ml-a2/index.mdx
@@ -4,7 +4,7 @@ description: 'Exploring randomized hill climbing, simulated annealing, and genet
 date: '2025-08-11'
 status: 'draft'
 type: 'project'
-tags: ['machine-learning', 'python', 'optimization']
+tags: ['machine-learning', 'python', 'optimization', 'MSCS']
 category: ['projects']
 draft: true
 audience: 'All'
