--- a/src/content/ideas/2025/ml-a3/index.mdx
+++ b/src/content/ideas/2025/ml-a3/index.mdx
@@ -4,7 +4,7 @@ description: 'K-Means and EM clustering on raw and reduced spaces (PCA, ICA, Ran
 date: '2025-08-12'
 status: 'draft'
 type: 'project'
-tags: ['machine-learning', 'python', 'unsupervised-learning']
+tags: ['machine-learning', 'python', 'unsupervised-learning', 'MSCS']
 category: ['projects']
 draft: true
 audience: 'All'
