--- a/src/content/ideas/2025/ml-a4/index.mdx
+++ b/src/content/ideas/2025/ml-a4/index.mdx
@@ -4,7 +4,7 @@ description: 'Value Iteration and Policy Iteration on small vs. large MDPs, plus
 date: '2025-08-13'
 status: 'draft'
 type: 'project'
-tags: ['machine-learning', 'python', 'reinforcement-learning']
+tags: ['machine-learning', 'python', 'reinforcement-learning', 'MSCS']
 category: ['projects']
 draft: true
 audience: 'All'
