--- a/src/content/ideas/2025/ml-retro/index.mdx
+++ b/src/content/ideas/2025/ml-retro/index.mdx
@@ -5,7 +5,7 @@ date: '2025-08-09'
 updated: '2025-09-25'
 status: 'in-progress'
 type: 'retro'
-tags: ['machine-learning', 'python', 'supervised-learning', 'unsupervised-learning', 'reinforcement-learning', 'optimization', 'computer-science', 'learning-in-public']
+tags: ['machine-learning', 'python', 'supervised-learning', 'unsupervised-learning', 'reinforcement-learning', 'optimization', 'computer-science', 'learning-in-public', 'MSCS']
 category: ['mscs']
 draft: false
 audience: 'All'
