--- a/src/content/ideas/2025/ml-a1/index.mdx
+++ b/src/content/ideas/2025/ml-a1/index.mdx
@@ -2,11 +2,12 @@
 title: 'A Practical Guide to Supervised Learning'
 description: 'A conceptual walkthrough of the supervised learning process, covering data analysis, model evaluation, and the fundamental trade-offs involved in building effective classifiers.'
 date: '2025-08-10'
+updated: '2025-10-20'
 status: 'in-progress'
 type: 'project'
-tags: ['machine-learning', 'supervised-learning', 'python', 'data-science']
+tags: ['machine-learning', 'supervised-learning', 'python', 'data-science', 'MSCS']
 category: ['projects']
-draft: true
+draft: false
 audience: 'All'
 media_subpath: "/ideas/ml-a1/"
 parent: '2025/ml-retro'
@@ -34,11 +35,11 @@ import testTrainSplit from './test-train-split-placeholder.jpg'
 
 ## Introduction: The Machine Learning Challenge
 
-Every day, we make countless classification decisions without thinking about them. Is this email spam or legitimate? Should I take an umbrella based on these clouds? Is this transaction fraudulent? These decisions seem effortless to us, but they represent one of the most fundamental challenges in machine learning: how do we teach a computer to make these same kinds of judgments?
+Classification is a fundamental task that we perform constantly, such as identifying spam emails or assessing whether a transaction is fraudulent. In machine learning, teaching a computer to make these same judgments is the domain of **supervised learning**. Given a dataset of examples with known outcomes (labeled data), the goal is to train a model that can make accurate predictions on new, unseen data.
 
-**Supervised learning** is the branch of machine learning that tackles this problem head-on. Given a dataset of examples where we know the correct answers (labeled data), the goal is to learn a function that can make accurate predictions on new, unseen data. It's like showing a student thousands of worked examples and then asking them to solve similar problems on their own.
+However, machine learning is not a black box; it is a systematic, iterative process with well-defined steps. For my first project in Georgia Tech's [CS 7641: Machine Learning](https://omscs.gatech.edu/cs-7641-machine-learning), I found that success came not from selecting a single "best" algorithm, but from a methodical application of the machine learning workflow.
 
-But here's the thing: machine learning isn't magic. It's a systematic, iterative process with well-defined steps. For my first project in Georgia Tech's [CS 7641: Machine Learning](https://omscs.gatech.edu/cs-7641-machine-learning), I discovered that success comes not from finding the "perfect" algorithm, but from methodically working through each stage of the machine learning workflow.
+This post outlines that workflow, using a practical project as a running example. For this project, I selected two contrasting classification datasets: one was low-dimensional (few features, ample examples), and the other was extremely high-dimensional (thousands of features, few examples). This approach was designed to test how data characteristics, particularly dimensionality, would influence algorithm performance.
 
 <Figure
   src={mlProcess}
@@ -64,43 +65,41 @@ Before diving into data or algorithms, the first step is understanding what type
 Machine learning algorithms fall into two broad families, each with fundamentally different philosophies about how to learn from data.
 
 **Parametric Models: Making Strong Assumptions**
-
 Parametric models assume that the relationship between features and target can be captured by a function with a fixed number of parameters. They make strong assumptions about the form of this relationship.
 
-**Examples:**
-- **Linear/Logistic Regression:** Assumes a linear relationship between features and target.
-- **Neural Networks:** While flexible, they have a fixed architecture with a predetermined number of weights.
+- **Examples:**
+  - **Linear/Logistic Regression:** Assumes a linear relationship between features and target.
+  - **Neural Networks:** While flexible, they have a fixed architecture with a predetermined number of weights.
 
-**Strengths:**
-- **Fast training and prediction:** Once you know the parameters, making predictions is quick.
-- **Data efficient:** They can work well with smaller datasets because they make strong assumptions.
-- **Interpretable:** Simpler parametric models can be easily understood and explained.
+- **Strengths:**
+  - **Fast training and prediction:** Once you know the parameters, making predictions is quick.
+  - **Data efficient:** They can work well with smaller datasets because they make strong assumptions.
+  - **Interpretable:** Simpler parametric models can be easily understood and explained.
 
-**Weaknesses:**
-- **High bias:** If your assumptions are wrong, the model will consistently make systematic errors.
-- **Limited flexibility:** They can't capture relationships that don't fit their assumed form.
+- **Weaknesses:**
+  - **High bias:** If your assumptions are wrong, the model will consistently make systematic errors.
+  - **Limited flexibility:** They can't capture relationships that don't fit their assumed form.
 
 **Non-Parametric Models: Letting the Data Speak**
-
 Non-parametric models make fewer assumptions about the underlying relationship. The number of parameters grows with the amount of training data, allowing them to capture more complex patterns.
 
-**Examples:**
-- **k-Nearest Neighbors:** Makes predictions based on the k most similar training examples.
-- **Decision Trees:** Recursively splits the data based on feature values.
-- **Support Vector Machines with RBF kernels:** Can capture complex, non-linear decision boundaries.
-
-**Strengths:**
-- **High flexibility:** Can capture complex, non-linear relationships.
-- **Few assumptions:** They let the data determine the relationship rather than imposing a pre-conceived form.
-
-**Weaknesses:**
-- **High variance:** They can be very sensitive to the specific training data, leading to overfitting.
-- **Data hungry:** They typically need more training data to perform well.
-- **Computational cost:** Training and prediction can be slower, especially as the dataset grows.
+- **Examples:**
+  - **k-Nearest Neighbors:** Makes predictions based on the k most similar training examples.
+  - **Decision Trees:** Recursively splits the data based on feature values.
+  - **Support Vector Machines with RBF kernels:** Can capture complex, non-linear decision boundaries.
+- **Strengths:**
+  - **High flexibility:** Can capture complex, non-linear relationships.
+  - **Few assumptions:** They let the data determine the relationship rather than imposing a pre-conceived form.
+- **Weaknesses:**
+  - **High variance:** They can be very sensitive to the specific training data, leading to overfitting.
+  - **Data hungry:** They typically need more training data to perform well.
+  - **Computational cost:** Training and prediction can be slower, especially as the dataset grows.
 
 ### The No Free Lunch Principle
 
-Here's a fundamental truth: **there is no single algorithm that works best for all problems**. This isn't a limitation of current technology—it's a mathematical certainty known as the "No Free Lunch" theorem. The choice of algorithm depends entirely on your data characteristics, computational constraints, and tolerance for different types of errors.
+A core concept in machine learning is that **no single algorithm performs best for all problems**. This is known as the "No Free Lunch" theorem. The optimal choice of algorithm is dependent on the characteristics of the data.
+
+This theorem formed the basis for my experimental hypothesis: flexible, non-parametric models would likely overfit the high-dimensional/low-sample dataset, while simpler parametric models, with their strong inductive bias, might generalize more effectively.
 
 <Figure
   src={freeLunch}
@@ -132,6 +131,7 @@ One of the most counterintuitive discoveries in machine learning is that **more 
   src={dimensionality}
   alt="The Curse of Dimensionality"
   caption="The Curse of Dimensionality"
+  width={500}
 />
 
 In low-dimensional space, our intuitions about distance and similarity work well. In 2D, we can easily visualize clusters and boundaries. But as we add more dimensions, strange things happen:
@@ -172,13 +172,10 @@ EDA involves systematically examining your dataset to understand its characteris
 
 EDA isn't just about understanding your data—it's about forming hypotheses about what might work:
 
-**If you discover highly correlated features:** Dimensionality reduction techniques might be effective, or simpler linear models might perform surprisingly well.
-
-**If your classes are severely imbalanced:** You know that accuracy alone won't be a good metric, and you might need specialized sampling techniques.
-
-**If relationships appear highly non-linear:** More complex, non-parametric models might be necessary.
-
-**If you have clear clusters or local patterns:** Distance-based methods like k-NN might work well (assuming you're not in high-dimensional space).
+- **If you discover highly correlated features:** Dimensionality reduction techniques might be effective, or simpler linear models might perform surprisingly well.
+- **If your classes are severely imbalanced:** You know that accuracy alone won't be a good metric, and you might need specialized sampling techniques.
+- **If relationships appear highly non-linear:** More complex, non-parametric models might be necessary.
+- **If you have clear clusters or local patterns:** Distance-based methods like k-NN might work well (assuming you're not in high-dimensional space).
 
 ### The Iterative Nature of EDA
 
@@ -188,6 +185,7 @@ EDA is iterative. Initial visualizations often raise new questions, leading to d
   src={eda}
   alt="Exploratory Data Analysis"
   caption="Exploratory Data Analysis"
+  width={600}
 />
 
 This detective work pays dividends later. The insights you gain here will guide your feature engineering, algorithm selection, and evaluation strategy. It's much better to discover data quirks now than after you've spent hours training models that can't possibly work with your data structure.
@@ -239,17 +237,18 @@ With your data prepared and your problem well-understood, it's time to experimen
   src={complexity}
   alt="Model Complexity"
   caption="Model Complexity"
+  width={600}
 />
 
 ### Neural Networks: Universal Function Approximators
 
 **Neural Networks** are parametric models that can approximate virtually any function given enough neurons and layers. They're incredibly flexible but require careful tuning to avoid overfitting.
 
-**Key Characteristics:**
-- Can capture complex, non-linear relationships
-- Require substantial amounts of data
-- Many hyperparameters to tune (architecture, learning rate, regularization)
-- Can suffer from high variance if not properly regularized
+- **Key Characteristics:**
+  - Can capture complex, non-linear relationships
+  - Require substantial amounts of data
+  - Many hyperparameters to tune (architecture, learning rate, regularization)
+  - Can suffer from high variance if not properly regularized
 
 **When to try them:** When you have large datasets, complex non-linear relationships, and the computational resources for extensive hyperparameter tuning.
 
@@ -257,11 +256,11 @@ With your data prepared and your problem well-understood, it's time to experimen
 
 **SVMs** find the decision boundary that maximizes the margin between classes. With different kernel functions, they can be either relatively simple (linear kernel) or highly complex (RBF kernel).
 
-**Key Characteristics:**
-- Linear SVMs are parametric and relatively low-variance
-- Non-linear kernels (RBF, polynomial) can capture complex patterns
-- Less prone to overfitting than neural networks
-- Effective in high-dimensional spaces
+- **Key Characteristics:**
+  - Linear SVMs are parametric and relatively low-variance
+  - Non-linear kernels (RBF, polynomial) can capture complex patterns
+  - Less prone to overfitting than neural networks
+  - Effective in high-dimensional spaces
 
 **When to try them:** When you have moderate-sized datasets, especially in high-dimensional spaces, or when you need a robust baseline that's less prone to overfitting.
 
@@ -269,11 +268,11 @@ With your data prepared and your problem well-understood, it's time to experimen
 
 **k-NN** is the epitome of non-parametric learning. It makes no assumptions about the underlying distribution and simply uses the k most similar training examples to make predictions.
 
-**Key Characteristics:**
-- Extremely flexible—can capture any decision boundary
-- Very high variance, especially with small k
-- Suffers significantly from the curse of dimensionality
-- No training phase, but prediction can be slow
+- **Key Characteristics:**
+  - Extremely flexible—can capture any decision boundary
+  - Very high variance, especially with small k
+  - Suffers significantly from the curse of dimensionality
+  - No training phase, but prediction can be slow
 
 **When to try them:** When you have low-to-moderate dimensional data with clear local patterns, or when you need a simple baseline that requires minimal tuning.
 
@@ -308,25 +307,25 @@ Where:
 
 ### Key Metrics and When to Use Them
 
-**Accuracy = (TP + TN) / (TP + TN + FP + FN)**
-- Simple and intuitive
-- **Problem:** Misleading with imbalanced datasets
-- **Example:** If 99% of emails are not spam, a model that always predicts "not spam" achieves 99% accuracy but is useless
+- **Accuracy = (TP + TN) / (TP + TN + FP + FN)**
+  - Simple and intuitive
+  - **Problem:** Misleading with imbalanced datasets
+  - **Example:** If 99% of emails are not spam, a model that always predicts "not spam" achieves 99% accuracy but is useless
 
-**Precision = TP / (TP + FP)**
-- "Of all positive predictions, how many were correct?"
-- Important when false positives are costly
-- **Example:** In medical diagnosis, you don't want to tell healthy people they're sick
+- **Precision = TP / (TP + FP)**
+  - "Of all positive predictions, how many were correct?"
+  - Important when false positives are costly
+  - **Example:** In medical diagnosis, you don't want to tell healthy people they're sick
 
-**Recall (Sensitivity) = TP / (TP + FN)**
-- "Of all actual positives, how many did we catch?"
-- Important when false negatives are costly
-- **Example:** In fraud detection, you don't want to miss actual fraud
+- **Recall (Sensitivity) = TP / (TP + FN)**
+  - "Of all actual positives, how many did we catch?"
+  - Important when false negatives are costly
+  - **Example:** In fraud detection, you don't want to miss actual fraud
 
-**F1-Score = 2 x (Precision x Recall) / (Precision + Recall)**
-- Harmonic mean of precision and recall
-- Provides a single score that balances both concerns
-- Useful when you need to optimize for both precision and recall
+- **F1-Score = 2 x (Precision x Recall) / (Precision + Recall)**
+  - Harmonic mean of precision and recall
+  - Provides a single score that balances both concerns
+  - Useful when you need to optimize for both precision and recall
 
 ### The Precision-Recall Trade-off
 
@@ -382,22 +381,22 @@ Every machine learning model's total error can be decomposed into three componen
 
 **Learning curves**—plots of training and validation error as a function of training set size—are invaluable for diagnosing bias and variance problems:
 
-**High Bias (Underfitting):**
-- Both training and validation error are high
-- The curves converge to a high error rate
-- Adding more data doesn't help much
-- **Solution:** Try more complex models or better features
+- **High Bias (Underfitting):**
+  - Both training and validation error are high
+  - The curves converge to a high error rate
+  - Adding more data doesn't help much
+  - **Solution:** Try more complex models or better features
 
-**High Variance (Overfitting):**
-- Large gap between training and validation error
-- Training error is low, validation error is high
-- The gap might decrease with more data, but slowly
-- **Solution:** Get more data, use regularization, or try simpler models
+- **High Variance (Overfitting):**
+  - Large gap between training and validation error
+  - Training error is low, validation error is high
+  - The gap might decrease with more data, but slowly
+  - **Solution:** Get more data, use regularization, or try simpler models
 
-**Just Right:**
-- Both errors are low
-- Small gap between training and validation curves
-- Performance improves steadily with more data
+- **Just Right:**
+  - Both errors are low
+  - Small gap between training and validation curves
+  - Performance improves steadily with more data
 
 This diagnostic framework helps you understand not just how well your models are performing, but why they're performing that way and what to do about it.
 
@@ -407,17 +406,17 @@ Machine learning is not a linear process where you follow steps 1-6 once and arr
 
 The workflow presented here provides a structured approach to this inherently messy process:
 
-**Start with Understanding:** Before touching any algorithms, deeply understand your problem and data. The time invested here pays dividends throughout the project.
+- **Start with Understanding:** Before touching any algorithms, deeply understand your problem and data. The time invested here pays dividends throughout the project.
 
-**Embrace the Scientific Method:** Form hypotheses during EDA, test them with models, and use the results to refine your understanding. Machine learning is fundamentally about systematic experimentation.
+- **Embrace the Scientific Method:** Form hypotheses during EDA, test them with models, and use the results to refine your understanding. Machine learning is fundamentally about systematic experimentation.
 
-**Evaluation is Everything:** A model is only as good as your ability to evaluate it properly. Choose metrics that align with your business goals, use robust validation techniques, and be honest about limitations.
+- **Evaluation is Everything:** A model is only as good as your ability to evaluate it properly. Choose metrics that align with your business goals, use robust validation techniques, and be honest about limitations.
 
-**No Free Lunch:** There is no single algorithm that works best for all problems. Success comes from matching algorithm characteristics to problem requirements, not from finding the "best" algorithm.
+- **No Free Lunch:** There is no single algorithm that works best for all problems. Success comes from matching algorithm characteristics to problem requirements, not from finding the "best" algorithm.
 
-**Iteration Leads to Insight:** Each cycle through the workflow deepens your understanding of both your data and the problem domain. What seems like "going backwards" is actually progress toward a more robust solution.
+- **Iteration Leads to Insight:** Each cycle through the workflow deepens your understanding of both your data and the problem domain. What seems like "going backwards" is actually progress toward a more robust solution.
 
-The field of machine learning continues to evolve rapidly, with new algorithms and techniques emerging regularly. But this fundamental workflow—understand, prepare, experiment, evaluate, iterate—remains constant. It's the disciplined application of this process, not the sophistication of any individual algorithm, that separates successful machine learning projects from failed ones.
+The main takeaway from the project was the confirmation that while theory provides a critical foundation, empirical testing is necessary to validate assumptions. The success of k-NN did not invalidate the theory of the "Curse of Dimensionality," but rather highlighted that in applied machine learning, the specific characteristics of a dataset can create conditions where one model's weaknesses are less detrimental than another's.
 
 The most important skill in machine learning isn't knowing every algorithm or technique. It's knowing how to systematically work through this process, learning from each iteration, and gradually building solutions that actually work in the real world.
 
@@ -462,4 +461,5 @@ These books were invaluable for understanding both the theoretical foundations a
 > In accordance with Georgia Tech's academic integrity policy and the license for course materials, the source code for this project is kept in a private repository. I believe passionately in sharing knowledge, but I also firmly respect the university's policies. This document follows [Dean Joyner's advice on sharing projects](https://www.reddit.com/r/OMSCS/comments/zwdwns/comment/j1udv6w/) with a focus not on any particular solution and instead on an abstract overview of the problem and the underlying concepts I learned.
 >
 > I would be delighted to discuss the implementation details, architecture, or specific code sections in an interview. Please feel free to reach out to request private access to the repository.
+
 
