--- a/src/content/ideas/2025/hdda-overview/index.mdx
+++ b/src/content/ideas/2025/hdda-overview/index.mdx
@@ -3,16 +3,27 @@ title: 'High-Dimensional Data Analytics'
 description: 'A survey of techniques for learning from data with high dimensions and a low number of samples'
 date: '2025-09-11'
 status: 'draft'
-type: 'project'
-tags: ['HDDA', 'machine-learning', 'python']
-category: ['projects']
+type: 'retro'
+tags: ['HDDA', 'machine-learning', 'python', 'computer-science', 'learning-in-public']
+category: ['mscs']
 draft: true
 audience: 'All'
-media_subpath: "/ideas/gios-pr3/"
+media_subpath: "/ideas/hdda-overview/"
 image:
   path: "./lidar-pointcloud.webp"
   alt: 'A colorized point cloud from the Nuscenes dataset'
 ---
+
+import BookCard from "../../../../components/BookCard.astro";
+import Figure from "../../../../components/Figure.astro";
+
+import statisticalLearning from "../../../books/statistical-learning.jpg";
+import introToStatLearning from "../../../books/intro-to-statistical-learning.jpg";
+import elementaryLinearAlgebra from "../../../books/elementary-linear-algebra.jpg";
+import imageProcessingCpp from "../../../books/image-processing-c++.jpg";
+import computerVision from "../../../books/computer-vision-szeliski.jpg";
+import convexOptimization from "../../../books/convex-optimization.jpg"
+
 
 ## Introduction
 
@@ -292,7 +303,69 @@ This module explores several advanced applications of regularization in modern d
 
 - Elements of Statistical Learning
 - An Introduction to Statistical Learning
-- Image Book1
-- Image Book2
-- Tensor Data
-- Convex Optimization
+
+<BookCard
+  title="An Introduction to Statistical Learning"
+  author="Gareth James, Daniela Witten, Trevor Hastie, and Robert Tibshirani"
+  img={introToStatLearning}
+  url="https://www.statlearning.com/"
+>
+  <p>
+    An accessible introduction to statistical learning methods. The chapters on cross-validation and model assessment were excellent resources for understanding proper evaluation techniques.
+  </p>
+</BookCard>
+
+<BookCard
+  title="Statistical Learning"
+  author="Harold Hotelling"
+  img={statisticalLearning}
+  url="https://www.statlearning.com/"
+>
+  <p>
+    A classic textbook on statistical learning.
+  </p>
+</BookCard>
+
+<BookCard
+  title="Elementary Linear Algebra"
+  author="Howard Anton"
+  img={elementaryLinearAlgebra}
+  url="https://www.amazon.com/Elementary-Linear-Algebra-10th-Howard/dp/0470432055"
+>
+  <p>
+    A classic textbook on elementary linear algebra.
+  </p>
+</BookCard>
+
+<BookCard
+  title="Image Processing C++"
+  author="Richard Szeliski"
+  img={imageProcessingCpp}
+  url="https://www.amazon.com/Image-Processing-C-Richard-Szeliski/dp/0262134489"
+>
+  <p>
+    A classic textbook on image processing.
+  </p>
+</BookCard>
+
+<BookCard
+  title="Computer Vision"
+  author="Richard Szeliski"
+  img={computerVision}
+  url="https://www.amazon.com/Computer-Vision-Principles-Algorithms-Problem/dp/0262044420"
+>
+  <p>
+    A classic textbook on computer vision.
+  </p>
+</BookCard>
+
+<BookCard
+  title="Convex Optimization"
+  author="Stephen Boyd and Lieven Vandenberghe"
+  img={convexOptimization}
+  url="https://www.amazon.com/Convex-Optimization-Boyd-Stephen/dp/0521833787"
+>
+  <p>
+    A classic textbook on convex optimization.
+  </p>
+</BookCard>
